oauthproxy/deployment.yaml
# https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/docs/examples/auth/oauth-external-auth/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --upstream=file:///dev/null
        - --email-domain=*
        - --http-address=0.0.0.0:4180
        - --whitelist-domain=*.k3s.fluv.net
        - --insecure-oidc-allow-unverified-email=true
        - --skip-provider-button=false
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.2
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            memory: 64Mi
